Fix main-color contrast

--- a/app/static/styles/medium.css
+++ b/app/static/styles/medium.css
@@ -34,7 +34,7 @@
 
     nav a {
         text-decoration: none;
-        font-size: 1rem;
+        font-size: .95rem;
         font-weight: 500;
         padding: 12px;
         /* margin: 0; */
@@ -51,7 +51,6 @@
     nav input[type=search] {
         background-color: var(--brand-color2);
         color: var(--text-color-light);
-        border-bottom: 1px solid var(--light-shade);
         width: 30vw;
     }
     nav input[type=search]:focus {
